# ojdkbuild

./: .gitignore  .gitmodules  README.md  devshell.bat  run.bat  run32.bat
resources/buildres/: deplib.manifest  deplib.rc
resources/changelog/: NEWS-11.txt  NEWS-17.txt  NEWS-8.txt
resources/checksums/: java-1.8.0-openjdk-1.8.0.101-1-ojdkbuild.b13.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.101-1-ojdkbuild.b13.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.101-3.b13.el6_8.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.102-1-ojdkbuild.b14.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.102-1-ojdkbuild.b14.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.102-2.b14.ojdkbuild.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.102-2.b14.ojdkbuild.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.111-0.b15.el6_8.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.111-1.b15.ojdkbuild.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.111-1.b15.ojdkbuild.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.111-3.b15.ojdkbuild.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.111-3.b15.ojdkbuild.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.121-0.b13.el6_8.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.121-1.b13.ojdkbuild.windows.debug.zip.sha256  java-1.8.0-openjdk-1.8.0.121-1.b13.ojdkbuild.windows.src.zip.sha256  java-1.8.0-openjdk-1.8.0.121-1.b13.ojdkbuild.windows.x86.debuginfo.zip.sha256  java-1.8.0-openjdk-1.8.0.121-1.b13.ojdkbuild.windows.x86.zip.sha256  java-1.8.0-openjdk-1.8.0.121-1.b13.ojdkbuild.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.121-1.b13.ojdkbuild.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.121-2.b13.ojdkbuild.windows.src.zip.sha256  java-1.8.0-openjdk-1.8.0.121-2.b13.ojdkbuild.windows.x86.debuginfo.zip.sha256  java-1.8.0-openjdk-1.8.0.121-2.b13.ojdkbuild.windows.x86.zip.sha256  java-1.8.0-openjdk-1.8.0.121-2.b13.ojdkbuild.windows.x86_64.debuginfo.zip.sha256  java-1.8.0-openjdk-1.8.0.121-2.b13.ojdkbuild.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.121-2.b13.ojdkbuild.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.131-0.b11.el6_9.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.131-1.b11.ojdkbuild.windows.src.zip.sha256  java-1.8.0-openjdk-1.8.0.131-1.b11.ojdkbuild.windows.x86.debuginfo.zip.sha256  java-1.8.0-openjdk-1.8.0.131-1.b11.ojdkbuild.windows.x86.zip.sha256  java-1.8.0-openjdk-1.8.0.131-1.b11.ojdkbuild.windows.x86_64.debuginfo.zip.sha256  java-1.8.0-openjdk-1.8.0.131-1.b11.ojdkbuild.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.131-1.b11.ojdkbuild.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.141-1.b16.ojdkbuild.windows.src.zip.sha256  java-1.8.0-openjdk-1.8.0.141-1.b16.ojdkbuild.windows.x86.debuginfo.zip.sha256  java-1.8.0-openjdk-1.8.0.141-1.b16.ojdkbuild.windows.x86.zip.sha256  java-1.8.0-openjdk-1.8.0.141-1.b16.ojdkbuild.windows.x86_64.debuginfo.zip.sha256  java-1.8.0-openjdk-1.8.0.141-1.b16.ojdkbuild.windows.x86_64.msi.sha256  java-1.8.0-openjdk-1.8.0.141-1.b16.ojdkbuild.windows.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.141-2.b16.el6_9.x86_64.zip.sha256  java-1.8.0-openjdk-1.8.0.151-1.b12.el6_9.x86_64.zip.sha256  (+466 more)
resources/ci/: azure-pipelines.yml
resources/cmake/: ojdkbuild_common.cmake  pkg-config.in  version.cmake  version_10.cmake  version_11.cmake  version_8.cmake  version_9.cmake
resources/installer/: installer.json
resources/installer/instres/: signer.js
resources/js/: sha256dir.js  sha256file.js  unzip.js  zip.js
resources/profiles/: everything.gitmodules .txt  everything.gitmodules.txt  jdk10_msi.gitmodules.txt  jdk11.gitmodules.txt  jdk11_msi.gitmodules.txt  jdk11_zip.gitmodules.txt  jdk12.gitmodules.txt  jdk12_msi.gitmodules.txt  jdk13.gitmodules.txt  jdk14.gitmodules.txt  jdk15.gitmodules.txt  jdk17.gitmodules.txt  jdk8.gitmodules.txt  jdk8_full.gitmodules.txt  jdk8_msi.gitmodules.txt  jdk8_webstart.gitmodules.txt  jdk8_zip.gitmodules.txt  jdk9_msi.gitmodules.txt  jdk9_zip.gitmodules.txt  update_notifier.gitmodules.txt
resources/scripts/: build-all.bat  creset.bat  gitify-hg.sh  gitify-patches.sh  modules.bat  set-compile-env-9.bat  set-compile-env-vs10-x86-ojfx.bat  set-compile-env-vs10-x86.bat  set-compile-env-vs10-x86_64-ojfx.bat  set-compile-env-vs10-x86_64.bat  set-compile-env-vs12-x86.bat  set-compile-env-vs12-x86_64.bat  set-compile-env-vs15-x86-openjfx.bat  set-compile-env-vs15-x86.bat  set-compile-env-vs15-x86_64-jdk8.bat  set-compile-env-vs15-x86_64-openjfx.bat  set-compile-env-vs15-x86_64.bat  set-compile-env-vs16-x86_64.bat  set-compile-env.bat
resources/tzdata/: VERSION
resources/update/: java-1.8.0-openjdk.windows.x86_64.version.json
src/java-1.8.0-openjdk/: CMakeLists.txt
src/java-1.8.0-openjdk/resources/: configure-and-make.bat  configure-and-make.sh  env.bat  installer.json  jdk_devel.xsl  jdk_devel_vs15.xsl  jdk_registry_env.xsl  st_env.bat
src/java-1.8.0-openjdk/resources/installer/: installer.json
src/java-1.8.0-openjdk/resources/installer/instres/: LICENSE.rtf
src/java-10-openjdk/: CMakeLists.txt
src/java-10-openjdk/resources/: configure-and-make-bootstrap.bat  configure-and-make-bootstrap.sh  configure-and-make-debug.bat  configure-and-make.bat  configure-and-make.sh  gradle.properties  run-gradle.bat
src/java-11-openjdk/: CMakeLists.txt
src/java-11-openjdk/resources/: env.bat  installer.json  jdk_registry_env.xsl
src/java-12-openjdk/: CMakeLists.txt
src/java-12-openjdk/resources/: jdk_registry_env.xsl
src/java-13-openjdk/: CMakeLists.txt
src/java-13-openjdk/resources/: env.bat  installer.json  installer_jre.json  jdk_registry_env.xsl
src/java-14-openjdk/: CMakeLists.txt
src/java-14-openjdk/resources/: env.bat  installer.json
src/java-15-openjdk/: CMakeLists.txt
src/java-15-openjdk/resources/: jdk_registry_env.xsl  st_env.bat
src/java-17-openjdk/: CMakeLists.txt
src/java-17-openjdk/resources/: env.bat  installer.json
src/java-9-openjdk/: CMakeLists.txt
src/java-9-openjdk/resources/: configure-and-make.bat  configure-and-make.sh
